--- a/src/pages/Portfolio.styles.sass
+++ b/src/pages/Portfolio.styles.sass
@@ -6,3 +6,7 @@
     height: 120vh
     section
         margin: 5% 0px
+
+@media all and (max-width: 1025px)
+    #portfolio-page
+        height: fit-content    
